--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>CSS PLO</title>
+  <title>CSS</title>
 </head>
 <body>
   <h1>Hébergement CSS</h1>
